	  `netsukuku_wifi' and its man page have been renamed to `ntk-wifi'.
	
	* The ANDNA keyring is now saved separately from the lcl_cache. It is
	  saved in andna_lcl_keyring.

	* The `andna_' prefix is now used for the filename of the andna
	  caches.

	* llist.c optimised

	* Compressed pkts /* TODO: explain better */

	* Pid file

	* New option: use_shared_internet

	* Static binaries + packages

	* -l logfile

	
Bug fixes:

	* The outgoing traffic to a node of the LAN is not shaped anymore.

	* hname_updates mismatch 

	* memory leaks

==== 0.0.7b ====

New features:
	
	* Multi-inet-gateways. 
	  The Netsukuku nodes will now automatically use multiple
	  inet-gateways to connect to the Internet, therefore their Internet
	  connection will be effectively load-balanced.
	  
	* Anti-loop multi-igw shield. 
	  The nodes which share their Internet connection will also
	  automatically use the shared connection of the other nodes. Through
	  a simple marking system, death loops are avoided.
	  
	* Traffic shaping.
	  The nodes which share their Internet connection can now shape it, in
	  this way they'll prioritize their local outgoingtraffic and the
	  lowdelay one (f.e. SSH).

	* The lowdelay TOS is now set in the ANDNA resolve requests.


Bug fixes:
	
	* When all the rnodes die, the radar resets the qspn counters
	
	* Code cleaned

	* A lot of bugs, which you haven't and you will never heard, have been
	  fixed. We've already forgotten them.


==== 0.0.6b ====
	
New features:

	* The NTK_RFC 0008 has been implemented.
	  ( http://lab.dyne.org/Ntk_restricted_ip_classes )

Bug fixes:

	* The NTK_RFC 0007 has been implemented. It fixes an exploitable bug
	  in the ANDNA protocol.

	* NetsukukuD has been tested on big endian machines. A lot of
	  endianness bugs has been fixed during the tests and now it seems to
	  work gracefully.
	  A lot of thanks to Vampire ;*
	
	* The ppp connection to the Internet doesn't set an IP address in the