@@ -228,9 +228,12 @@ on the FreeNode irc server (irc.freenode.org).
 
 { Don't panic! }
 
-If you encounter any bug, please report it to netsukuku@freaknet.org or
-contact any author explaining what the problem is and if possible a way to
-reproduce it.
+If you encounter any bug, please report it.
+Use the online bug track system:
+    http://bugs.dyne.org/
+or the mailing list:
+    http://lists.dyne.org/netsukuku/
+and explain what the problem is and if possible a way to reproduce it.
 
 
 **
