@@ -1,4 +1,4 @@
-.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.3
+.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.14
 .\"
 .\" Standard preamble:
 .\" ========================================================================
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "ANDNA 8"
-.TH ANDNA 8 "2006-06-03" "NetsukukuD 0.0.8b" ""
+.TH ANDNA 8 "2006-06-09" "NetsukukuD 0.0.8b (debug)" ""
 .SH "NAME"
 ANDNA \- Abnormal Netsukuku Domain Name Anarchy
 .SH "DESCRIPTION"
@@ -161,7 +161,7 @@ The \fIntkd\fR\|(8) daemon reads it when it is started and when it receives the
 just do: 
 .PP
 .Vb 1
-\&        killall \-SIGHUP ntkd
+\&        killall -SIGHUP ntkd
 .Ve
 .PP
 All the hostnames, which are already registered by other nodes, are
@@ -197,7 +197,7 @@ It is possible to know the list of hostnames registered by a node. You have to
 simply reverse resolve its ip. For example:
 .PP
 .Vb 1
-\&        dig \-x 127.0.0.2
+\&        dig -x 127.0.0.2
 .Ve
 .PP
 This command shows your currently registered hostnames. You can use it to know
@@ -230,8 +230,8 @@ Not implemented
 The utility \fIntk\-resolv\fR\|(8) can be used to resolve \s-1SNSD\s0 hostnames. Examples:
 .PP
 .Vb 2
-\&        ntk\-resolv \-s 53/udp host
-\&        ntk\-resolv \-s http host
+\&        ntk-resolv -s 53/udp host
+\&        ntk-resolv -s http host
 .Ve
 .SH "SIGNALS"
 .IX Header "SIGNALS"
@@ -273,9 +273,14 @@ changed in \fInetsukuku.conf\fR.
 .IX Header "BUGS"
 { Don't panic! }
 .PP
-If you encounter any bug, please report it to netsukuku@freaknet.org or
-contacts any author explaining what the problem is and if possible a way to
-reproduce it.
+If you encounter any bug, please report it.
+Use the online bug track system: 
+    <http://bugs.dyne.org/> 
+.PP
+or the mailing list:
+    <http://lists.dyne.org/netsukuku/>
+.PP
+and explain what the problem is and if possible a way to reproduce it.
 .SH "CONTACTS"
 .IX Header "CONTACTS"
 Subcrive to the netsukuku mailing to get help, be updated on the latest news
@@ -299,10 +304,10 @@ Andrea Leofreddi <andrea.leofreddi@gmail.com>, Katolaz <katolaz@freaknet.org>,
 Federico Tomassini <effetom@gmail.com>
 .PP
 For a complete list read the \s-1AUTHORS\s0 file or visit:
-<http://netsukuku.freaknet.org/?p=Contacts>
+    <http://netsukuku.freaknet.org/?p=Contacts>
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
 For more information about Netsukuku visit:
-<http://netsukuku.freaknet.org>
+    <http://netsukuku.freaknet.org>
 .PP
 \&\fIntkd\fR\|(8), \fIntk\-wifi\fR\|(8), \fIiproute2\fR\|(8), \fIroute\fR\|(8)
