@@ -160,9 +160,14 @@ changed in F<netsukuku.conf>.
 
 { Don't panic! }
 
-If you encounter any bug, please report it to netsukuku@freaknet.org or
-contacts any author explaining what the problem is and if possible a way to
-reproduce it.
+If you encounter any bug, please report it.
+Use the online bug track system: 
+    L<http://bugs.dyne.org/> 
+
+or the mailing list:
+    L<http://lists.dyne.org/netsukuku/>
+
+and explain what the problem is and if possible a way to reproduce it.
 
 =head1 CONTACTS
 
@@ -188,11 +193,11 @@ Andrea Leofreddi <andrea.leofreddi@gmail.com>, Katolaz <katolaz@freaknet.org>,
 Federico Tomassini <effetom@gmail.com>
 
 For a complete list read the AUTHORS file or visit:
-L<http://netsukuku.freaknet.org/?p=Contacts>
+    L<http://netsukuku.freaknet.org/?p=Contacts>
 
 =head1 SEE ALSO
 
 For more information about Netsukuku visit:
-L<http://netsukuku.freaknet.org>
+    L<http://netsukuku.freaknet.org>
 
 ntkd(8), ntk-wifi(8), iproute2(8), route(8)
