@@ -1,4 +1,4 @@
-.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.3
+.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.14
 .\"
 .\" Standard preamble:
 .\" ========================================================================
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "ntk-resolv 8"
-.TH ntk-resolv 8 "2006-06-07" "perl v5.8.7" ""
+.TH ntk-resolv 8 "2006-06-09" "perl v5.8.6" ""
 .SH "NAME"
 ntk\-resolv \- Andns Lookup Resolver
 .SH "SYNOPSIS"
@@ -147,7 +147,7 @@ It uses the 'andns protocol' to encode his contents, as explained in Netsukuku
 The simplest example is:
 .PP
 .Vb 1
-\&        ntk\-resolv hname
+\&        ntk-resolv hname
 .Ve
 .PP
 With this comand, it asks \s-1ANDNA\s0 to tell which \s-1IP\s0 registerd the hostname 'hname'.
@@ -177,8 +177,8 @@ The default service and protocol are 0 and tcp.
 Example:
 .Sp
 .Vb 2
-\&        ntk\-resolv \-s domain/udp host
-\&        ntk\-resolv \-s 53/udp host
+\&        ntk-resolv -s domain/udp host
+\&        ntk-resolv -s 53/udp host
 .Ve
 .Sp
 See the section \fB\s-1QUERY\s0 \s-1TYPE\s0, \s-1SERVICES\s0 \s-1AND\s0 \s-1PROTOCOL\s0\fR for a better explanation.
@@ -198,7 +198,7 @@ specifing univoque abbreviation of argument. So, there is the equivalence:
 You can formule different kind of queries.
 .PP
 With a `ptr' query, you specify an \s-1IP\s0, and you will have, if exists, the hostname
-that registered that name.
+that registered that \s-1IP\s0.
 .PP
 With a `snsd' query, you specify a hostname, a service and a protocol. If service and
 protocol are not specified, they are set to 0, and you will have the \s-1IP\s0 assigned
@@ -234,10 +234,10 @@ For example, the next commands will retrieve the \s-1IP\s0(s) that offers web-pa
 for the hostname \*(L"host\*(R":
 .PP
 .Vb 4
-\&        ntk\-resolv \-s http/tcp host
-\&        ntk\-resolv \-s 80/tcp   host
-\&        ntk\-resolv \-s 80       host
-\&        ntk\-resolv \-s http     host
+\&        ntk-resolv -s http/tcp host
+\&        ntk-resolv -s 80/tcp   host
+\&        ntk-resolv -s 80       host
+\&        ntk-resolv -s http     host
 .Ve
 .PP
 To configure the \s-1SNSD\s0 delegations, see the \s-1SNSD\s0 HowTo.
@@ -259,6 +259,18 @@ requested is 0.
 .PP
 Note: service and proto are also ignored when the query type is `ip\->host`
 (ptr query type).
+.SH "BUGS"
+.IX Header "BUGS"
+{ Don't panic! }
+.PP
+If you encounter any bug, please report it.
+Use the online bug track system: 
+    <http://bugs.dyne.org/> 
+.PP
+or the mailing list:
+    <http://lists.dyne.org/netsukuku/>
+.PP
+and explain what the problem is and if possible a way to reproduce it.
 .SH "CONTACTS"
 .IX Header "CONTACTS"
 Subcrive to the netsukuku mailing to get help, be updated on the latest news
@@ -283,7 +295,7 @@ Main contributors:
 Andrea Leofreddi <andrea.leofreddi@gmail.com>, Katolaz <katolaz@freaknet.org>,
 .PP
 For a complete list read the \s-1AUTHORS\s0 file or visit:
-<http://netsukuku.freaknet.org/?p=Contacts>
+    <http://netsukuku.freaknet.org/?p=Contacts>
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
 \&\fIntkd\fR\|(8), \fIandna\fR\|(8), \fIservices\fR\|(5)
