@@ -1,4 +1,4 @@
-.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.3
+.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.14
 .\"
 .\" Standard preamble:
 .\" ========================================================================
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "ntk-wifi 8"
-.TH ntk-wifi 8 "2006-05-31" "NetsukukuD 0.0.8b" ""
+.TH ntk-wifi 8 "2006-06-09" "NetsukukuD 0.0.8b (debug)" ""
 .SH "NAME"
 ntk\-wifi \- configures the specified wifi card to join Netsukuku
 .SH "SYNOPSIS"
@@ -148,9 +148,14 @@ ntk-wifi wlan0
 .IX Header "BUGS"
 { Don't panic! }
 .PP
-If you encounter any bug, please report it to netsukuku@freaknet.org or
-contacts any author explaining what the problem is and if possible a way to
-reproduce it.
+If you encounter any bug, please report it.
+Use the online bug track system: 
+    <http://bugs.dyne.org/> 
+.PP
+or the mailing list:
+    <http://lists.dyne.org/netsukuku/>
+.PP
+and explain what the problem is and if possible a way to reproduce it.
 .SH "CONTACTS"
 .IX Header "CONTACTS"
 Subcrive to the netsukuku mailing to get help, be updated on the latest news
@@ -174,10 +179,10 @@ Andrea Leofreddi <andrea.leofreddi@gmail.com>, Katolaz <katolaz@freaknet.org>,
 Federico Tomassini <effetom@gmail.com>
 .PP
 For a complete list read the \s-1AUTHORS\s0 file or visit:
-<http://netsukuku.freaknet.org/?p=Contacts>
+    <http://netsukuku.freaknet.org/?p=Contacts>
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
 For more information about Netsukuku visit:
-<http://netsukuku.freaknet.org>
+    <http://netsukuku.freaknet.org>
 .PP
 \&\fIntkd\fR\|(8), \fIandna\fR\|(8), \fIiproute2\fR\|(8), \fIroute\fR\|(8)
