@@ -1,4 +1,4 @@
-.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.3
+.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.14
 .\"
 .\" Standard preamble:
 .\" ========================================================================
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "NetsukukuD 8"
-.TH NetsukukuD 8 "2006-06-07" "NetsukukuD 0.0.8b" ""
+.TH NetsukukuD 8 "2006-06-09" "NetsukukuD 0.0.8b (debug)" ""
 .SH "NAME"
 ntkd \- Netsukuku protocol daemon
 .SH "SYNOPSIS"
@@ -174,7 +174,7 @@ wlan0. You can use more than one interface by specifying multiple times the
 \&\fB\-i\fR option. For example: 
 .Sp
 .Vb 1
-\&        ntkd \-i wlan0 \-i eth0 \-i wifi1 \-i eth1
+\&        ntkd -i wlan0 -i eth0 -i wifi1 -i eth1
 .Ve
 .IP "\fB\-a\fR, \fB\-\-no_andna\fR" 4
 .IX Item "-a, --no_andna"
@@ -227,14 +227,14 @@ Displays the version of the \fBntkd\fR daemon.
 Usually you'll just want to use \fBntkd\fR with a wifi device:
 .PP
 .Vb 2
-\&        ntk\-wifi wlan0
-\&        ntkd \-i wlan0
+\&        ntk-wifi wlan0
+\&        ntkd -i wlan0
 .Ve
 .PP
 If you one to use more than one network interface:
 .PP
 .Vb 1
-\&        ntkd \-i eth0 \-i wlan0 \-i wifi1 \-i eth2
+\&        ntkd -i eth0 -i wlan0 -i wifi1 -i eth2
 .Ve
 .SH "SIGNALS"
 .IX Header "SIGNALS"
@@ -356,9 +356,14 @@ If you are using modules you have to load them before launching the daemon.
 .IX Header "BUGS"
 { Don't panic! }
 .PP
-If you encounter any bug, please report it to netsukuku@freaknet.org or
-contacts any author explaining what the problem is and if possible a way to
-reproduce it.
+If you encounter any bug, please report it.
+Use the online bug track system: 
+    <http://bugs.dyne.org/> 
+.PP
+or the mailing list:
+    <http://lists.dyne.org/netsukuku/>
+.PP
+and explain what the problem is and if possible a way to reproduce it.
 .SH "CONTACTS"
 .IX Header "CONTACTS"
 Subcrive to the netsukuku mailing to get help, be updated on the latest news
@@ -382,10 +387,10 @@ Andrea Leofreddi <andrea.leofreddi@gmail.com>, Katolaz <katolaz@freaknet.org>,
 Federico Tomassini <effetom@gmail.com>
 .PP
 For a complete list read the \s-1AUTHORS\s0 file or visit:
-<http://netsukuku.freaknet.org/?p=Contacts>
+    <http://netsukuku.freaknet.org/?p=Contacts>
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
 For more information about Netsukuku visit:
-<http://netsukuku.freaknet.org>
+    <http://netsukuku.freaknet.org>
 .PP
 \&\fIntk\-wifi\fR\|(8), \fIandna\fR\|(8), \fIiproute2\fR\|(8), \fIroute\fR\|(8)
